--- a/AutomationFramework/AutomationFramework.csproj
+++ b/AutomationFramework/AutomationFramework.csproj
@@ -19,4 +19,9 @@
     <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.9.8" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\" />
+    <Folder Include="Steps\" />
+  </ItemGroup>
+
 </Project>
